--- a/script_event.bib
+++ b/script_event.bib
@@ -92,22 +92,27 @@
     pages = "1681--1686",
 }
 
-@paper{AAAI1612157,
-	author = {Karl Pichotta and Raymond Mooney},
-	title = {Learning Statistical Scripts with LSTM Recurrent Neural Networks},
-	conference = {AAAI Conference on Artificial Intelligence},
-	year = {2016},
-	keywords = {Natural Language Processing; Deep Learning},
-	url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12157}
+@article{Pichotta_Mooney_2016, 
+	title={Learning Statistical Scripts with LSTM Recurrent Neural Networks}, 
+	volume={30}, 
+	url={https://ojs.aaai.org/index.php/AAAI/article/view/10347}, 
+	DOI={10.1609/aaai.v30i1.10347},  
+	number={1}, 
+	journal={Proceedings of the AAAI Conference on Artificial Intelligence}, 
+	author={Pichotta, Karl and Mooney, Raymond}, 
+	year={2016}, 
+	month={Mar.}
 }
 
-@paper{AAAI1611995,
-	author = {Mark Granroth-Wilding and Stephen Clark},
-	title = {What Happens Next? Event Prediction Using a Compositional Neural Network Model},
-	conference = {AAAI Conference on Artificial Intelligence},
-	year = {2016},
-	keywords = {event inference, neural networks, embeddings, narrative},
-	url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/11995}
+@article{Granroth-Wilding_Clark_2016,
+	title={What Happens Next? Event Prediction Using a Compositional Neural Network Model},
+	volume={30}, url={https://ojs.aaai.org/index.php/AAAI/article/view/10344},
+	DOI={10.1609/aaai.v30i1.10344},
+	number={1},
+	journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+	author={Granroth-Wilding, Mark and Clark, Stephen},
+	year={2016},
+	month={Mar.}
 }
 
 @inproceedings{wang-etal-2017-integrating,
@@ -250,13 +255,15 @@
     pages = "75--83",
 }
 
-@paper{AAAI1817126,
-	author = {Noah Weber and Niranjan Balasubramanian and Nathanael Chambers},
-	title = {Event Representations With Tensor-Based Compositions},
-	conference = {AAAI Conference on Artificial Intelligence},
-	year = {2018},
-	keywords = {Event; Script; Schema},
-	url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17126/16027}
+@article{Weber_Balasubramanian_Chambers_2018,
+	title={Event Representations With Tensor-Based Compositions},
+	volume={32}, url={https://ojs.aaai.org/index.php/AAAI/article/view/11932},
+	DOI={10.1609/aaai.v32i1.11932},
+	number={1},
+	journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+	author={Weber, Noah and Balasubramanian, Niranjan and Chambers, Nathanael},
+	year={2018},
+	month={Apr.}
 }
 
 @article{Lee_Goldwasser_2018, 
